--- a/device/mio/src/top_gpac.ucf
+++ b/device/mio/src/top_gpac.ucf
@@ -194,28 +194,28 @@ NET "LED[0]" LOC = P13;
 #NET "FPGA_SPARE_1"      LOC=C16    |   IOSTANDARD = LVCMOS33;
 #NET "FPGA_SPARE_2"      LOC=K6     |   IOSTANDARD = LVCMOS33;
 
-NET "MULTI_IO[10]" LOC = H5;
-NET "MULTI_IO[10]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[9]" LOC = N5;
-NET "MULTI_IO[9]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[8]" LOC = L6;
-NET "MULTI_IO[8]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[7]" LOC = L3;
-NET "MULTI_IO[7]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[6]" LOC = L4;
-NET "MULTI_IO[6]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[5]" LOC = L2;
-NET "MULTI_IO[5]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[4]" LOC = L1;
-NET "MULTI_IO[4]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[3]" LOC = K5;
-NET "MULTI_IO[3]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[2]" LOC = K4;
-NET "MULTI_IO[2]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[1]" LOC = K1;
-NET "MULTI_IO[1]" IOSTANDARD = LVCMOS33;
-NET "MULTI_IO[0]" LOC = K2;
-NET "MULTI_IO[0]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[10]" LOC = H5;
+#NET "MULTI_IO[10]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[9]" LOC = N5;
+#NET "MULTI_IO[9]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[8]" LOC = L6;
+#NET "MULTI_IO[8]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[7]" LOC = L3;
+#NET "MULTI_IO[7]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[6]" LOC = L4;
+#NET "MULTI_IO[6]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[5]" LOC = L2;
+#NET "MULTI_IO[5]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[4]" LOC = L1;
+#NET "MULTI_IO[4]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[3]" LOC = K5;
+#NET "MULTI_IO[3]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[2]" LOC = K4;
+#NET "MULTI_IO[2]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[1]" LOC = K1;
+#NET "MULTI_IO[1]" IOSTANDARD = LVCMOS33;
+#NET "MULTI_IO[0]" LOC = K2;
+#NET "MULTI_IO[0]" IOSTANDARD = LVCMOS33;
 
 # fix for USBpix cards below hardware version 1.04 which have I2C fix
 NET "SDA" LOC = D10 | FLOAT;
@@ -385,38 +385,38 @@ NET "SRAM_IO[0]" LOC = D17;
 
 #NET "DEBUG_CLK1"   LOC = "P14" |   IOSTANDARD = LVCMOS33;
 #NET "DEBUG_CLK2"   LOC = "R14" |   IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[0]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[0]" LOC = K13;
-NET "DEBUG_D[1]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[1]" LOC = K14;
-NET "DEBUG_D[2]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[2]" LOC = L13;
-NET "DEBUG_D[3]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[3]" LOC = N14;
-NET "DEBUG_D[4]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[4]" LOC = N15;
-NET "DEBUG_D[5]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[5]" LOC = P16;
-NET "DEBUG_D[6]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[6]" LOC = P15;
-NET "DEBUG_D[7]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[7]" LOC = R16;
-NET "DEBUG_D[8]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[8]" LOC = T16;
-NET "DEBUG_D[9]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[9]" LOC = P18;
-NET "DEBUG_D[10]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[10]" LOC = P17;
-NET "DEBUG_D[11]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[11]" LOC = R18;
-NET "DEBUG_D[12]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[12]" LOC = R17;
-NET "DEBUG_D[13]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[13]" LOC = T18;
-NET "DEBUG_D[14]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[14]" LOC = T17;
-NET "DEBUG_D[15]" IOSTANDARD = LVCMOS33;
-NET "DEBUG_D[15]" LOC = U18;
+#NET "DEBUG_D[0]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[0]" LOC = K13;
+#NET "DEBUG_D[1]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[1]" LOC = K14;
+#NET "DEBUG_D[2]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[2]" LOC = L13;
+#NET "DEBUG_D[3]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[3]" LOC = N14;
+#NET "DEBUG_D[4]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[4]" LOC = N15;
+#NET "DEBUG_D[5]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[5]" LOC = P16;
+#NET "DEBUG_D[6]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[6]" LOC = P15;
+#NET "DEBUG_D[7]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[7]" LOC = R16;
+#NET "DEBUG_D[8]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[8]" LOC = T16;
+#NET "DEBUG_D[9]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[9]" LOC = P18;
+#NET "DEBUG_D[10]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[10]" LOC = P17;
+#NET "DEBUG_D[11]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[11]" LOC = R18;
+#NET "DEBUG_D[12]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[12]" LOC = R17;
+#NET "DEBUG_D[13]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[13]" LOC = T18;
+#NET "DEBUG_D[14]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[14]" LOC = T17;
+#NET "DEBUG_D[15]" IOSTANDARD = LVCMOS33;
+#NET "DEBUG_D[15]" LOC = U18;
 
 
 # ------ General purpose IOs --------------------------------------
@@ -466,23 +466,24 @@ NET "CMD_DATA" LOC = D9 | IOSTANDARD = LVCMOS33; // FE CMD
 #NET "DOUT[19]" LOC = C5;
 NET "CMD_CLK" LOC = C5 | IOSTANDARD = LVCMOS33; // FE CLK
 
-NET "ADC_CLK_N"    LOC = A10 | IOSTANDARD = LVDS_25;
-NET "ADC_CLK_P"    LOC = B10 | IOSTANDARD = LVDS_25;
-NET "ADC_DCO_N"    LOC = E10 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_DCO_P"    LOC = F10 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_FCO_N"    LOC = E8 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_FCO_P"    LOC = F8 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_OUT_P[0]" LOC = D2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_OUT_N[0]" LOC = D1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_OUT_P[1]" LOC = E1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_OUT_N[1]" LOC = E2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_OUT_P[2]" LOC = F2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_OUT_N[2]" LOC = G1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_OUT_P[3]" LOC = H2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_OUT_N[3]" LOC = H1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
-NET "ADC_SDI"      LOC = G3 | IOSTANDARD = LVCMOS33;
-NET "ADC_SCLK"     LOC = J1 | IOSTANDARD = LVCMOS33;
-NET "ADC_CS_B"     LOC = H4 | IOSTANDARD = LVCMOS33;
-NET "ADC_SDO"      LOC = J2 | IOSTANDARD = LVCMOS33 | PULLUP;
+# http://www.xilinx.com/support/answers/18095.html
+#NET "ADC_CLK_N"    LOC = A10 | IOSTANDARD = LVDS_25;
+#NET "ADC_CLK_P"    LOC = B10 | IOSTANDARD = LVDS_25;
+#NET "ADC_DCO_N"    LOC = E10 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_DCO_P"    LOC = F10 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_FCO_N"    LOC = E8 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_FCO_P"    LOC = F8 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_OUT_P[0]" LOC = D2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_OUT_N[0]" LOC = D1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_OUT_P[1]" LOC = E1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_OUT_N[1]" LOC = E2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_OUT_P[2]" LOC = F2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_OUT_N[2]" LOC = G1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_OUT_P[3]" LOC = H2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_OUT_N[3]" LOC = H1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+#NET "ADC_SDI"      LOC = G3 | IOSTANDARD = LVCMOS33;
+#NET "ADC_SCLK"     LOC = J1 | IOSTANDARD = LVCMOS33;
+#NET "ADC_CS_B"     LOC = H4 | IOSTANDARD = LVCMOS33;
+#NET "ADC_SDO"      LOC = J2 | IOSTANDARD = LVCMOS33 | PULLUP;
 
 NET "INJ_STRB" LOC = B5 | IOSTANDARD = LVCMOS33;
