--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,8 @@ before_install:
 install:
   - pip install https://github.com/walac/pyusb/archive/master.zip
   - pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/735/pySiLibUSB-2.0.3.tar.gz
-  - pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/719/Basil-2.0.2.tar.gz
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/719/Basil-2.0.2.tar.gz; fi
+  - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install https://github.com/SiLab-Bonn/basil/archive/master.zip; fi
   - pip install progressbar-latest
   - sudo apt-get install -qq iverilog-daily
   #  Build iverilog from source
