--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,6 @@ before_install:
   - wget -O cocotb-master.zip https://github.com/potentialventures/cocotb/archive/master.zip 
   - unzip cocotb-master.zip
   - export COCOTB=$(pwd)/cocotb-master
-  - cd host
 # The next couple lines fix a crash with multiprocessing on Travis and are not specific to using Miniconda
   - sudo rm -rf /dev/shm
   - sudo ln -s /run/shm /dev/shm
@@ -34,7 +33,7 @@ install:
   - pip install https://github.com/walac/pyusb/archive/master.zip
   - pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/735/pySiLibUSB-2.0.3.tar.gz
   - if [ "$TRAVIS_BRANCH" == "master" ]; then pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/719/Basil-2.0.2.tar.gz; fi
-  - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install https://github.com/SiLab-Bonn/basil/archive/master.zip; fi
+  - if [ "$TRAVIS_BRANCH" == "development" ]; then git clone -b master https://github.com/SiLab-Bonn/basil; cd basil/host; python setup.py develop; cd ../..; fi
   - pip install progressbar-latest
   - sudo apt-get install -qq iverilog-daily
   #  Build iverilog from source
@@ -43,6 +42,7 @@ install:
 #  - unzip iverilog-master.zip
 #  - cd iverilog-master && autoconf && ./configure && make && sudo make install && cd ..
   # Install pybar
+  - cd host
   - python setup.py develop
 # Run test
 script:
