--- a/host/pybar/dut_mio_gpac.yaml
+++ b/host/pybar/dut_mio_gpac.yaml
@@ -1,14 +1,3 @@
-#
-# ------------------------------------------------------------
-# Copyright (c) All rights reserved
-# SiLab, Institute of Physics, University of Bonn
-# ------------------------------------------------------------
-#
-# SVN revision information:
-#  $Rev::                       $:
-#  $Author::                    $:
-#  $Date::                      $:
-#
 
 name    : mio_gpac
 version : 2.0.0
@@ -60,15 +49,15 @@ hw_drivers:
     base_addr : 0x18900
     mem_bytes : 2
 
-  - name      : GPAC_ADC
-    type      : fadc_rx
-    interface : USB
-    base_addr : 0x18940
+#  - name      : GPAC_ADC
+#    type      : fadc_rx
+#    interface : USB
+#    base_addr : 0x18940
 
-  - name      : GPAC_ADC_1
-    type      : fadc_rx
-    interface : USB
-    base_addr : 0x18950
+#  - name      : GPAC_ADC_1
+#    type      : fadc_rx
+#    interface : USB
+#    base_addr : 0x18950
 
   - name      : CCPD_GLOBAL_SPI
     type      : spi
