--- a/pybar/configuration.yaml
+++ b/pybar/configuration.yaml
@@ -4,7 +4,7 @@ dut : dut_mio.yaml  # DUT hardware configuration (.yaml). Change to dut_mio_gpac
 dut_configuration : # dut_configuration_usbpix.yaml  # DUT init configuration (.yaml). Default: not given / empty
 
 fe_configuration :  # FE configuration file, text (.cfg) or HDF5 (.h5) file. If not given, latest valid configuration (run status FINISHED) will be taken. If a number is given, configuration from run with specified number will be taken.
-fe_flavor : fei4a  # FEI4 flavor/type for initial configuration. Valid values: 'fei4a' or 'fei4b'
+fe_flavor : fei4b  # FEI4 flavor/type for initial configuration. Valid values: 'fei4a' or 'fei4b'
 chip_address :  # Chip Address for initial configuration, if not given, broadcast bit will be set
 module_id : module_test  # module identifier / name, sub-folder with given name will be created inside working_dir
 
