--- a/tests/test_scans/configuration.yaml
+++ b/tests/test_scans/configuration.yaml
@@ -1,7 +1,29 @@
-dut : ../../pybar/dut_usbpix.yaml  # DUT hardware configuration (.yaml). Change to dut_usbpix_gpac.yaml for GPAC card.
-dut_configuration : ../../pybar/dut_configuration_usbpix.yaml  # DUT init configuration (.yaml). Default: not given / empty
+working_dir :  # Module data will be written to this path. If not given, use path of this file. Default: not given / empty
+
+dut : ../../pybar/dut_usbpix.yaml  # DUT hardware configuration (.yaml). Change to dut_mio_gpac.yaml for GPAC support.
+dut_configuration : dut_configuration_mio.yaml  # DUT init configuration (.yaml). Change to dut_configuration_mio_gpac.yaml for GPAC support.
 
 fe_configuration :  # FE configuration file, text (.cfg) or HDF5 (.h5) file. If not given, latest valid configuration (run status FINISHED) will be taken. If a number is given, configuration from run with specified number will be taken.
-module_id : scan_unittests  # module identifier / name, sub-folder with given name will be created inside working_dir
 fe_flavor : fei4a  # FEI4 flavor/type for initial configuration. Valid values: 'fei4a' or 'fei4b'
 chip_address :  # Chip Address for initial configuration, if not given, broadcast bit will be set
+module_id : module_test  # module identifier / name, sub-folder with given name will be created inside working_dir
+
+#
+# *** run configuration can be added here ***
+#
+#Fei4Tuning:
+#    enable_shift_masks : ["Enable", "C_Low", "C_High"]
+#    target_threshold : 50 # target threshold
+#    target_charge : 280 # target charge
+#    target_tot : 5 # target ToT
+#    global_iterations : 4
+#    local_iterations : 3
+#
+#AnalogScan:
+#    scan_parameters : {'PlsrDAC': 280}
+#    enable_shift_masks : ["Enable", "C_Low", "C_High"]
+#
+#ThresholdScan:
+#    scan_parameters : {'PlsrDAC': [0, 100]}
+#    enable_shift_masks : ["Enable", "C_Low", "C_High"]
+#
