--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,13 @@ notifications:
 before_install:
   - sudo add-apt-repository -y ppa:team-electronics/ppa
   - sudo apt-get update -qq
-  - wget http://repo.continuum.io/archive/Anaconda-2.1.0-Linux-x86_64.sh -O anaconda.sh
-  - chmod +x anaconda.sh
-  - ./anaconda.sh -b
-  - export PATH=/home/travis/anaconda/bin:$PATH
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
   - conda update --yes conda
-  - conda update --yes anaconda
-#  - conda create --yes -n anacondaenv python=$TRAVIS_PYTHON_VERSION
-#  - source activate anacondaenv
+  - conda install --yes numpy cython pytables scipy matplotlib pandas
+  - pip install progressbar-latest pyvisa pyvisa-py
 #  - wget -O cocotb-master.zip https://github.com/potentialventures/cocotb/archive/master.zip 
 #  - unzip cocotb-master.zip
 #  - export COCOTB=$(pwd)/cocotb-master
@@ -34,7 +33,6 @@ install:
   - pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/735/pySiLibUSB-2.0.3.tar.gz
   - if [ "$TRAVIS_BRANCH" == "master" ]; then pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/719/Basil-2.0.2.tar.gz; fi
   - if [ "$TRAVIS_BRANCH" == "development" ]; then git clone -b master https://github.com/SiLab-Bonn/basil; cd basil/host; python setup.py develop; cd ../..; fi
-  - pip install progressbar-latest
 #  - sudo apt-get install -qq iverilog-daily
 #  Build iverilog from source
 #  - sudo apt-get install gperf
