--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,18 @@ notifications:
     - janssen@physik.uni-bonn.de
     - pohl@physik.uni-bonn.de
  
-# Setup anaconda in a new virtual environment
+# Setup miniconda with needed packages in a new virtual test-environment
 before_install:
   - sudo add-apt-repository -y ppa:team-electronics/ppa
   - sudo apt-get update -qq
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda/bin:$PATH
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
   - conda update --yes conda
-  - conda install --yes numpy cython pytables scipy matplotlib pandas
+  - conda info -a
+  - conda create --yes -n test-environment numpy cython pytables scipy matplotlib pandas
+  - source activate test-environment
   - pip install progressbar-latest pyvisa pyvisa-py
 #  - wget -O cocotb-master.zip https://github.com/potentialventures/cocotb/archive/master.zip 
 #  - unzip cocotb-master.zip
