--- a/pybar/dut_mio.yaml
+++ b/pybar/dut_mio.yaml
@@ -5,8 +5,21 @@ version : 2.0.0
 transfer_layer:
   - name     : USB
     type     : SiUsb
+# Example of additional lab devices to be used by pyBAR
+#  - name     : Visa
+#    type     : Visa
+#    init     :
+#        resource_name : ASRLCOM6::INSTR
+#        backend : "@py"
 
 hw_drivers:
+# Example of additional lab devices to be used by pyBAR
+#  - name      : PowerSupply
+#    type      : scpi
+#    interface : Visa
+#    init      :
+#        device : TTi QL335TP
+
   - name      : cmd
     type      : cmd_seq
     interface : USB
