--- a/pybar/dut_mio.yaml
+++ b/pybar/dut_mio.yaml
@@ -62,7 +62,7 @@ hw_drivers:
     base_addr : 0x18900
 
   - name      : POWER
-    type      : FEI4AdapterCard
+    type      : FEI4QuadModuleAdapterCard
     interface : USB
     base_addr : 0x0
 
