--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - conda info -a
   - conda create --yes -n test-environment numpy cython pytables scipy matplotlib pandas pyserial bitarray nose yaml
   - source activate test-environment
-  - pip install progressbar-latest pyvisa pyvisa-py
+  - pip install pyyaml progressbar-latest pyvisa pyvisa-py
 #  - wget -O cocotb-master.zip https://github.com/potentialventures/cocotb/archive/master.zip 
 #  - unzip cocotb-master.zip
 #  - export COCOTB=$(pwd)/cocotb-master
