--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,9 @@ before_install:
   - export PATH="$HOME/miniconda/bin:$PATH"
   - conda update --yes conda
   - conda info -a
-  - conda create --yes -n test-environment numpy cython pytables scipy matplotlib pandas pyserial bitarray nose yaml
+  - conda create --yes -n test-environment numpy cython pytables scipy matplotlib pandas pyserial bitarray nose pyzmq pyyaml
   - source activate test-environment
   - pip install progressbar-latest pyvisa pyvisa-py
-  - conda install pyzmq pyyaml
 #  - wget -O cocotb-master.zip https://github.com/potentialventures/cocotb/archive/master.zip 
 #  - unzip cocotb-master.zip
 #  - export COCOTB=$(pwd)/cocotb-master
