--- a/pybar/dut_mio.yaml
+++ b/pybar/dut_mio.yaml
@@ -5,7 +5,8 @@ version : 2.0.0
 transfer_layer:
   - name     : USB
     type     : SiUsb
-# Example of additional lab device transfer layers to be used by pyBAR
+
+# Example of additional lab device transfer layers to be used with pyBAR
 #  - name     : Visa
 #    type     : Visa
 #    init     :
@@ -13,7 +14,28 @@ transfer_layer:
 #        backend : "@py"
 
 hw_drivers:
-# Example of additional lab devices to be used by pyBAR
+  - name      : ADAPTER_CARD
+    type      : FEI4AdapterCard # FEI4QuadModuleAdapterCard
+    interface : USB
+    base_addr : 0x0
+
+# Uncomment for FEI4QuadModuleAdapterCard
+#  - name      : rx_3
+#    type      : fei4_rx
+#    interface : USB
+#    base_addr : 0x18400
+#    
+#  - name      : rx_2
+#    type      : fei4_rx
+#    interface : USB
+#    base_addr : 0x18500
+#
+#  - name      : rx_1
+#    type      : fei4_rx
+#    interface : USB
+#    base_addr : 0x18600
+
+# Example of additional lab devices to be used with pyBAR
 #  - name      : PowerSupply
 #    type      : scpi
 #    interface : Visa
@@ -29,6 +51,7 @@ hw_drivers:
 #    interface : Visa
 #    init      :
 #        device : Agilent 33250a
+
   - name      : cmd
     type      : cmd_seq
     interface : USB
@@ -50,21 +73,6 @@ hw_drivers:
     interface : USB
     base_addr : 0x18300
 
-  - name      : rx_3
-    type      : fei4_rx
-    interface : USB
-    base_addr : 0x18400
-    
-  - name      : rx_2
-    type      : fei4_rx
-    interface : USB
-    base_addr : 0x18500
-
-  - name      : rx_1
-    type      : fei4_rx
-    interface : USB
-    base_addr : 0x18600
-
   - name      : tdc_rx2
     type      : tdc_s3
     interface : USB
@@ -79,11 +87,6 @@ hw_drivers:
     type      : gpio
     interface : USB
     base_addr : 0x18900
-
-  - name      : POWER
-    type      : FEI4AdapterCard
-    interface : USB
-    base_addr : 0x0
 
 user_drivers:
     
@@ -127,5 +130,35 @@ registers:
         size    : 1
         offset  : 1
       - name    : EN_VA1
+        size    : 1
+        offset  : 0
+
+  - name        : POWER_QUAD
+    type        : StdRegister
+    hw_driver   : gpio_power
+    size        : 8
+    fields:
+      - name    : OC_CH4
+        size    : 1
+        offset  : 7
+      - name    : OC_CH3
+        size    : 1
+        offset  : 6
+      - name    : OC_CH2
+        size    : 1
+        offset  : 5
+      - name    : OC_CH1
+        size    : 1
+        offset  : 4
+      - name    : EN_CH4
+        size    : 1
+        offset  : 3
+      - name    : EN_CH3
+        size    : 1
+        offset  : 2
+      - name    : EN_CH2
+        size    : 1
+        offset  : 1
+      - name    : EN_CH1
         size    : 1
         offset  : 0
